[workspace]
members = ["crates/scribble-app"]

[package]
name = "scribble"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
scribble-app = { path = "crates/scribble-app" }
winit = "0.30.11"
wgpu = "25.0.2"

[dependencies]
scribble-app.workspace = true
